--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 body {
-    background-color: black;
+    background-color: white;
     }
     
-    #row1 {
+    #row-1 {
         padding: 10px;
     }
     
-    #row2 {
+    #row-2 {
         justify-content: center;
     }
     
     .col-3 {
-        color: #FFF200;
+        color: black;
         text-align: center;
     }
     
-    #highScore {
-        color: #FFF200;
+    #yourhighScore {
+        color: black;
     }
     
     .display-3 {
@@ -29,7 +29,7 @@ body {
     }
     
     .jumbotron {
-        background-color: #64A966;
+        background-color: white;
         height: 270px;
     }
     
@@ -39,7 +39,7 @@ body {
     }
     
     .card {
-        background-color: #64A966;
+        background-color: lightgoldenrodyellow;
     }
     
     img {
@@ -67,56 +67,10 @@ body {
         width: 30%;
     }
     
-    /* highScores HTML */
-    
-    #highRow {
-        padding: 10px;
-    }
-    
-    #theTottaly {
-        color: #FFF200;
-    }
-    
     #header {
         font-size: 4.5rem;
         font-weight: 300;
         line-height: 1.2;
     }
+
     
-    #imageHigh {
-        justify-content: center;
-        padding: 30px;
-    }
-    
-    /* Media query */
-    
-    @media (max-width: 1148px){
-        #imageMedia {
-            display: none;
-        }
-    }
-    
-    @media (max-width: 1206px){
-        #imagenDisplay {
-            display: none;
-        }
-    
-    }
-    
-    @media (max-width: 830px) {
-        .display-3 {
-            font-size: 350%;
-            margin-top: 1px;
-        }
-        .jumbotron {
-            height: 100%;
-        }
-        #imagen1 {
-            float: right;
-        }
-        #cardMedia {
-            float: right;
-        }
-    }
-    
-    /* Fernando Soto Calis @hoffman1200 */
